// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`present by RequestStatus COMPLETED 1`] = `
{
  "anchorCommit": {
    "cid": "anchor-cid",
    "content": {
      "path": "/some/path",
      "prev": "bafyreibfyl5p56xjdarie2p7brjmwktxgiggdm6hxyeugauk6zxg5c6g6m",
      "proof": "anchor-proof-cid",
    },
  },
  "cid": "bafyreibfyl5p56xjdarie2p7brjmwktxgiggdm6hxyeugauk6zxg5c6g6m",
  "createdAt": 1577934240000,
  "id": "889483296",
  "message": "Fresh request",
  "status": "COMPLETED",
  "streamId": "k2t6wyfsu4pfxu08vo93w38oyu9itsuf374ekyeno0wb62ozm2o9sznrn8qp72",
  "updatedAt": 1612325100000,
}
`;

exports[`present by RequestStatus COMPLETED but no associated anchor 1`] = `
{
  "anchorCommit": {
    "cid": "bafyreibfyl5p56xjdarie2p7brjmwktxgiggdm6hxyeugauk6zxg5c6g6m",
    "content": {
      "path": undefined,
      "prev": "bafyreibfyl5p56xjdarie2p7brjmwktxgiggdm6hxyeugauk6zxg5c6g6m",
      "proof": undefined,
    },
  },
  "cid": "bafyreibfyl5p56xjdarie2p7brjmwktxgiggdm6hxyeugauk6zxg5c6g6m",
  "createdAt": 1577934240000,
  "id": "889483296",
  "message": "Fresh request",
  "status": "COMPLETED",
  "streamId": "k2t6wyfsu4pfxu08vo93w38oyu9itsuf374ekyeno0wb62ozm2o9sznrn8qp72",
  "updatedAt": 1612325100000,
}
`;

exports[`present by RequestStatus PENDING, PROCESSING, FAILED, READY 1`] = `
{
  "cid": "bafyreibfyl5p56xjdarie2p7brjmwktxgiggdm6hxyeugauk6zxg5c6g6m",
  "createdAt": 1577934240000,
  "id": "889483296",
  "message": "Fresh request",
  "status": "PENDING",
  "streamId": "k2t6wyfsu4pfxu08vo93w38oyu9itsuf374ekyeno0wb62ozm2o9sznrn8qp72",
  "updatedAt": 1612325100000,
}
`;

exports[`present by RequestStatus PENDING, PROCESSING, FAILED, READY 2`] = `
{
  "cid": "bafyreibfyl5p56xjdarie2p7brjmwktxgiggdm6hxyeugauk6zxg5c6g6m",
  "createdAt": 1577934240000,
  "id": "889483296",
  "message": "Fresh request",
  "status": "PROCESSING",
  "streamId": "k2t6wyfsu4pfxu08vo93w38oyu9itsuf374ekyeno0wb62ozm2o9sznrn8qp72",
  "updatedAt": 1612325100000,
}
`;

exports[`present by RequestStatus PENDING, PROCESSING, FAILED, READY 3`] = `
{
  "cid": "bafyreibfyl5p56xjdarie2p7brjmwktxgiggdm6hxyeugauk6zxg5c6g6m",
  "createdAt": 1577934240000,
  "id": "889483296",
  "message": "Fresh request",
  "status": "FAILED",
  "streamId": "k2t6wyfsu4pfxu08vo93w38oyu9itsuf374ekyeno0wb62ozm2o9sznrn8qp72",
  "updatedAt": 1612325100000,
}
`;

exports[`present by RequestStatus PENDING, PROCESSING, FAILED, READY 4`] = `
{
  "cid": "bafyreibfyl5p56xjdarie2p7brjmwktxgiggdm6hxyeugauk6zxg5c6g6m",
  "createdAt": 1577934240000,
  "id": "889483296",
  "message": "Fresh request",
  "status": "READY",
  "streamId": "k2t6wyfsu4pfxu08vo93w38oyu9itsuf374ekyeno0wb62ozm2o9sznrn8qp72",
  "updatedAt": 1612325100000,
}
`;

exports[`present by RequestStatus REPLACED 1`] = `
{
  "cid": "bafyreibfyl5p56xjdarie2p7brjmwktxgiggdm6hxyeugauk6zxg5c6g6m",
  "createdAt": 1577934240000,
  "id": "889483296",
  "message": "Fresh request",
  "status": "FAILED",
  "streamId": "k2t6wyfsu4pfxu08vo93w38oyu9itsuf374ekyeno0wb62ozm2o9sznrn8qp72",
  "updatedAt": 1612325100000,
}
`;
